# pomopod

./: README.md
backend/: .gitignore  pyproject.toml
backend/src/pomopod/: __init__.py  __main__.py  startup.py
backend/src/pomopod/cli/: __init__.py  config.py  daemon.py  profile.py  room.py  space.py  timer.py
backend/src/pomopod/client/: __init__.py  asynchttp.py  base.py  http.py
backend/src/pomopod/core/: config.py  constants.py  models.py  state.py
backend/src/pomopod/err/: client.py  config.py  state.py
backend/src/pomopod/server/: daemon.py  notifications.py  state.py  timer.py
backend/src/pomopod/tui/: __init__.py  app.py
backend/src/pomopod/tui/styles/: base.tcss
frontend/src/: App.tsx
frontend/src/components/pomodoro/: pomodoro-notifications.ts  pomodoro-workspace.tsx
frontend/src/features/: pomodoro-settings-sheet.tsx  pomodoro-toaster.tsx  pomodoro-workspace.tsx  room-code-pill.tsx  session-selector-buttons.tsx  session-summary.tsx  space-switcher-dock.tsx  timer-actions-buttons.tsx  timer-display.tsx
frontend/src/hooks/: use-pomodoro-ending-notification.ts  use-pomodoro-timer.ts  use-room-code-clipboard.ts  use-theme-mode.ts
frontend/src/lib/: constants.ts  storage.ts  timer.ts  types.ts
